scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -2022,7 +2022,7 @@ ul.header-card__text {
   max-width: 700px;
   margin: 0 auto 100px;
   background-color: #fff;
-  padding: 60px 40px 60px 60px;
+  padding: 60px 20px 60px 60px;
   border: 1px solid #0b2235;
   border-radius: 10px;
   box-sizing: border-box;
@@ -2031,21 +2031,19 @@ ul.header-card__text {
   overflow-y: hidden;
 }
 
-.popup-header {
-  position: relative;
-}
-
 .popup-content {
+  position: relative;
   max-height: 500px;
   overflow-y: auto;
+  padding-right: 20px;
 }
 
 .popup__close {
   width: 15px;
   height: 15px;
   position: absolute;
-  right: 0px;
-  top: -30px;
+  right: 20px;
+  top: 20px;
   cursor: pointer;
 }
 
